Global Update: PvP Trap,  Configs, Locales, Optimization

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,17 +1,38 @@
-# Настройки шансов и механик
-settings:
-  base-chance: 20.0
-  chance-per-luck: 0.5
-  fail-bonus: 5.0
-
-# Настройки предметов
 items:
   spawner-pickaxe:
     material: GOLDEN_PICKAXE
-    name: "<gold>⛏ Экстрактор Спавнеров"
+    name: "&#FFD700⚡ Эфирный Экстрактор"
     lore:
-      - "<gray>Нажмите ПКМ по спавнеру,"
-      - "<gray>чтобы попытаться добыть его."
-      - "<dark_red>Одноразовый предмет."
-    # Если нужно использовать кастомную модель (Resource Pack)
+      - "&8▪ &7Тип: &fИнструмент"
+      - "&8▪ &7Шанс: &eЗависит от Удачи"
+      - "&8▪ &7Прочность: &cОдноразовый"
+      - ""
+      - "&7Нажмите &fПКМ &7по спавнеру,"
+      - "&7чтобы попытаться извлечь его."
+
+    settings:
+      base-chance: 20.0
+      chance-per-luck: 0.5
+      fail-bonus: 5.0
+
+  pvp-trap:
+    material: PRISMARINE_SHARD
+    name: "&#FF0044☠ Якорь Бездны"
+    lore:
+      - "&8▪ &7Каст: &fНерушимый барьер"
+      - "&8▪ &7Радиус: &b8 блоков"
+      - "&8▪ &7Длительность: &b20 секунд"
+      - ""
+      - "&7Создает мертвую зону,"
+      - "&7из которой &cеще никто"
+      - "&cне выбирался живым..."
+      - ""
+      - "&#FF0044[ Нажмите ПКМ для активации ]"
+
     custom-model-data: 0
+
+    settings:
+      radius: 8.0
+      duration: 20
+      cooldown: 60
+      wind-charge-cooldown: 10
