Update v1.5: Disenchant GUI, Portable Shulkers, Death Clock & Fixes

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,7 +9,7 @@ items:
       - ""
       - "&7Нажмите &fПКМ &7по спавнеру,"
       - "&7чтобы попытаться извлечь его."
-
+    custom-model-data: 0
     settings:
       base-chance: 20.0
       chance-per-luck: 0.5
@@ -28,11 +28,53 @@ items:
       - "&cне выбирался живым..."
       - ""
       - "&#FF0044[ Нажмите ПКМ для активации ]"
-
     custom-model-data: 0
-
     settings:
       radius: 8.0
       duration: 20
       cooldown: 60
       wind-charge-cooldown: 10
+
+  death-clock:
+    material: CLOCK
+    name: "&#E0AAFF⏳ Хроносфера Спасения"
+    lore:
+      - "&8▪ &7Тип: &fПассивный артефакт"
+      - "&8▪ &7Эффект: &aСохранение инвентаря"
+      - ""
+      - "&7Если находится в инвентаре"
+      - "&7во время смертельного удара:"
+      - "&a✔ Спасает вещи и опыт"
+      - "&c✖ Ломается после использования"
+      - "&c✖ Не спасает от Проклятия Утраты"
+    custom-model-data: 103
+
+  random-disenchanter:
+    material: PAPER
+    name: "&#AA00AA🔮 Свиток Забвения (Случайный)"
+    lore:
+      - "&8▪ &7Тип: &fМагический свиток"
+      - "&8▪ &7Действие: &dСлучайное извлечение"
+      - ""
+      - "&7Используйте в столе чар (/disenchant)"
+      - "&7чтобы снять &dодин случайный &7чар"
+      - "&7и поместить его в книгу."
+    custom-model-data: 101
+
+  select-disenchanter:
+    material: PAPER
+    name: "&#00AAFF📜 Свиток Извлечения (Выбор)"
+    lore:
+      - "&8▪ &7Тип: &fМагический свиток"
+      - "&8▪ &7Действие: &bТочечное извлечение"
+      - ""
+      - "&7Используйте в столе зачарований (/disenchant)"
+      - "&7чтобы &bвыбрать &7какой именно"
+      - "&7чар перенести в книгу."
+    custom-model-data: 102
+
+disenchant:
+  gui-title: "Магический стол: Извлечение"
+  gui-lore:
+    - "&7Нажмите, чтобы извлечь:"
+    - "&e%enchant%"
