--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -22,3 +22,13 @@ mining:
   success: "&#00FF00&lУСПЕХ! &7Спавнер успешно извлечен."
   fail: "&#FF5555Неудача! &7Бонус жалости: &b%bonus%%"
   interrupted: "&#FF5555Ритуал прерван: Спавнер исчез!"
+
+disenchant:
+  success: "&#00FF00✔ Вы успешно сняли зачарование!"
+  received-book: "&#00FF00Получена книга: &f<enchant>"
+  no-enchants: "&#FF5555На этом предмете нет зачарований."
+  inventory-full: "&#FF5555Ваш инвентарь полон! Книга упала на землю."
+  gui-title: "Выберите чар для снятия"
+  gui-lore:
+    - "&7Нажмите, чтобы снять:"
+    - "&e<enchant> <level>"
