New item and QoL

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,8 +11,8 @@ items:
       - "&7чтобы попытаться извлечь его."
     custom-model-data: 0
     settings:
-      base-chance: 20.0
-      chance-per-luck: 0.5
+      base-chance: 15.0
+      chance-per-luck: 0.2
       fail-bonus: 5.0
 
   pvp-trap:
@@ -32,7 +32,7 @@ items:
     settings:
       radius: 8.0
       duration: 20
-      cooldown: 60
+      cooldown: 40
       wind-charge-cooldown: 10
 
   death-clock:
@@ -73,8 +73,42 @@ items:
       - "&7чар перенести в книгу."
     custom-model-data: 102
 
+  soul-prism:
+    material: AMETHYST_SHARD
+    name: "&#9966CC🔮 Призма Души (Пустая)"
+    lore:
+      - "&8▪ &7Тип: &fЛовушка душ"
+      - "&8▪ &7Состояние: &7Пусто"
+      - ""
+      - "&7Нажмите &fПКМ &7по существу,"
+      - "&7чтобы заточить его в кристалл."
+      - ""
+      - "&cНе работает на Боссов."
+
+    filled:
+      material: AMETHYST_CLUSTER
+      name: "&#9966CC🔮 Призма Души (&d<mob>&r&#9966CC)"
+      lore-header:
+        - "&8▪ &7Тип: &fЛовушка душ"
+        - "&8▪ &7Содержание: &d<mob>"
+        - "&8▪ &7Здоровье: &c<health>"
+      lore-footer:
+        - ""
+        - "&7Нажмите &fПКМ &7по блоку,"
+        - "&7чтобы освободить существо."
+
+    custom-model-data: 104 # Для пустой
+    filled-model-data: 105 # Для полной
+
+    blacklist:
+      - ENDER_DRAGON
+      - WITHER
+      - WARDEN
+      - PLAYER
+
 disenchant:
   gui-title: "Магический стол: Извлечение"
   gui-lore:
     - "&7Нажмите, чтобы извлечь:"
     - "&e%enchant%"
+
