--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -40,3 +40,9 @@ catcher:
   blacklisted: "&#FF5555Это существо слишком могущественно для призмы!"
   tamed-owner: "&#FF5555Вы не можете украсть чужого питомца!"
   villager-trade-format: "&8▪ &e%buy1% &7%buy2% &8➡ &a%sell%"
+
+prestige:
+  disabled: "&#FF5555Система престижа временно отключена!"
+  success: "&#00FF00✔ Вы успешно переродились! Получено: &b%amount% Осколков"
+  not-enough: "&#FF5555Недостаточно уровней для престижа."
+  confirm-title: "Подтвердите сброс"
