--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -29,7 +29,8 @@ disenchant:
   received-book: "&#00FF00Получена книга: &f<enchant>"
   no-enchants: "&#FF5555На этом предмете нет зачарований."
   inventory-full: "&#FF5555Ваш инвентарь полон! Книга упала на землю."
-  gui-title: "Выберите чар для снятия"
+  gui-title: "Выберите зачарование"
+  min-enchants: "&#FF5555Нужно минимум 2 зачарования на предмете!"
   gui-lore:
     - "&7Нажмите, чтобы снять:"
     - "&e<enchant> <level>"
@@ -46,3 +47,15 @@ prestige:
   success: "&#00FF00✔ Вы успешно переродились! Получено: &b%amount% Осколков"
   not-enough: "&#FF5555Недостаточно уровней для престижа."
   confirm-title: "Подтвердите сброс"
+
+spawner:
+  change-success: "&#00FF00✔ Тип спавнера успешно изменен на %mob%!"
+  change-fail: "&#FF5555✖ Ритуал провалился! Призма разрушилась."
+  blacklisted: "&#FF5555Этот тип существа слишком силен для спавнера!"
+  not-prism: "&#FF5555Это не заполненная призма!"
+
+compass:
+  searching: "&eНачинаю сканирование местности..."
+  found: "&aСтруктура &f%structure% &aнайдена! Компас настроен."
+  not-found: "&cВ радиусе %radius% блоков структур не найдено."
+  cooldown: "&cАртефакт перезаряжается. Ждать: %time% сек."
